workup/kubernetes-tutorial/kubernetes-dashboard-example/dashboard-ingress.yaml
#apiVersion: networking.k8s.io/v1beta1 (incorrect in tutorial)
#kind: Ingress
#metadata:
#  name: dashboard-ingress
#  namespace: kubernetes-dashboard
#spec:
#  rules:
#  - host: kubernetes-dashboard.com
#    http:
#      paths:
#      - backend:
#          serviceName: kubernetes-dashboard
#          servicePort: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: kubernetes-dashboard.com
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port: 80
